WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
81139
Fix UI process crash when a plug-in process crashes with a modal dialog showing
https://bugs.webkit.org/show_bug.cgi?id=81139
Summary
Fix UI process crash when a plug-in process crashes with a modal dialog showing
Anders Carlsson
Reported
2012-03-14 11:23:23 PDT
Fix UI process crash when a plug-in process crashes with a modal dialog showing
Attachments
Patch
(7.34 KB, patch)
2012-03-14 11:28 PDT
,
Anders Carlsson
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2012-03-14 11:28:17 PDT
Created
attachment 131890
[details]
Patch
mitz
Comment 2
2012-03-14 11:42:26 PDT
Comment on
attachment 131890
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=131890&action=review
> Source/WebKit2/UIProcess/Plugins/mac/PluginProcessProxyMac.mm:227 > + RefPtr<PluginProcessProxy> protect(this);
This can use a comment.
Anders Carlsson
Comment 3
2012-03-14 12:26:36 PDT
Committed
r110728
: <
http://trac.webkit.org/changeset/110728
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug