Fix UI process crash when a plug-in process crashes with a modal dialog showing https://bugs.webkit.org/show_bug.cgi?id=81139 <rdar://problem/9641197>

Reviewed by Dan Bernstein.

When a plug-in process crashes, its corresponding PluginProcessProxy object is deleted immediately,
which is bad if we're currently running a nested run loop.

Fix this by making PluginProcessProxy ref-counted and protecting it before the call to -[NSApp runModalForWindow:].

* UIProcess/Plugins/PluginProcessManager.cpp:
(WebKit::PluginProcessManager::pluginProcessWithPath):
(WebKit::PluginProcessManager::getOrCreatePluginProcess):
* UIProcess/Plugins/PluginProcessManager.h:
(PluginProcessManager):
* UIProcess/Plugins/PluginProcessProxy.cpp:
(WebKit::PluginProcessProxy::create):
(WebKit::PluginProcessProxy::pluginProcessCrashedOrFailedToLaunch):
* UIProcess/Plugins/PluginProcessProxy.h:
(PluginProcessProxy):
* UIProcess/Plugins/mac/PluginProcessProxyMac.mm:
(WebKit::PluginProcessProxy::setModalWindowIsShowing):
(WebKit::PluginProcessProxy::beginModal):

Canonical link: https://commits.webkit.org/98298@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110728 268f45cc-cd09-0410-ab3c-d52691b4dbfc